Formulário de contatos

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,1 +1,15 @@
-<p>contato works!</p>
+<mat-toolbar>Contatos</mat-toolbar>
+<form>
+    <mat-form-field class="full-width">
+        <mat-label>Nome: </mat-label>
+        <input matInput placeholder="Digite seu nome" />
+    </mat-form-field>
+
+    <mat-form-field class="full-width">
+        <mat-label>Email: </mat-label>
+        <input matInput placeholder="Digite seu email" />
+    </mat-form-field>
+
+    <button mat-button color="primary">Adicionar</button>
+
+</form>
