Adicionando o novo contato na lista

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -81,7 +81,7 @@
                 
                     <br />
                 
-                    <button mat-button color="primary">Adicionar</button>
+                    <button mat-mat-raised-button color="primary">Adicionar</button>
                 
                 </form>
         </mat-card>    
