--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -15,6 +15,14 @@
                 <ng-container matColumnDef="foto">
                     <th mat-header-cell *matHeaderCellDef ></th>
                     <td mat-cell *matCellDef="let contato">
+                        <div *ngIf="contato.foto">
+                            <img with="50" 
+                                 height="50" 
+                                 src="data:image/jpg;base64,{{ contato.foto}}"/>
+                        </div>
+                        <div *ngIf="!contato.foto">
+
+                        </div>
                         <input type="file" name="foto" (change)="uploadFoto($event, contato)"/>
                     </td>
                  </ng-container>
