--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -16,7 +16,7 @@
                     <th mat-header-cell *matHeaderCellDef ></th>
                     <td mat-cell *matCellDef="let contato">
                         <div *ngIf="contato.foto">
-                            <img with="50" (click)="visualizarContato(contato)"
+                            <img with="50" (click)="visualizarContato(contato)" 
                                  height="50" 
                                  src="data:image/jpg;base64,{{ contato.foto}}"/>
                         </div>
@@ -58,6 +58,13 @@
                  <tr mat-header-row *matHeaderRowDef="colunas"></tr>
                  <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
             </table>
+
+            <mat-paginator [length]="totalElementos" 
+                           [pageSize]="tamanho"
+                           [pageSizeOptions]="pageSizeOptions"
+                           (page)="paginar($event)">
+            </mat-paginator>
+
         </mat-card>
     </mat-tab>
     <mat-tab>
