--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -81,7 +81,7 @@
                         <input formControlName="nome" matInput placeholder="Digite seu nome" />
                     </mat-form-field>
                 
-                    <div *ngIf="formulario.controls.nome.errors">
+                    <div *ngIf="formulario.controls.nome.errors && !formulario.controls.nome.pristine">
                         <div *ngIf="formulario.controls.nome.errors.required">
                             Campo nome é obrigatório.
                         </div>
@@ -92,7 +92,7 @@
                         <input formControlName="email" matInput placeholder="Digite seu email" />
                     </mat-form-field>
                 
-                    <div *ngIf="formulario.controls.email.errors">
+                    <div *ngIf="formulario.controls.email.errors && !formulario.controls.nome.pristine">
                         <div *ngIf="formulario.controls.email.errors.required">
                             Campo email é obrigatório.
                         </div>
